--- a/sources/Debate-frontend/src/app/homepage/homepage.component.html
+++ b/sources/Debate-frontend/src/app/homepage/homepage.component.html
@@ -7,16 +7,16 @@
  
         <mat-grid-list cols="2" rowHeight="600px" gutterSize="5px">
             <mat-grid-tile>
-                    <app-debate-card [debate]='debate'></app-debate-card>
+                    <app-debate-card [debate]="debate"></app-debate-card>
             </mat-grid-tile>
             <mat-grid-tile>
-                    <app-debate-card [debate]='debate'></app-debate-card>
+                    <app-debate-card [debate]="debate"></app-debate-card>
             </mat-grid-tile>
             <mat-grid-tile>
-                    <app-debate-card [debate]='debate'></app-debate-card>
+                    <app-debate-card [debate]="debate"></app-debate-card>
             </mat-grid-tile>
             <mat-grid-tile>
-                    <app-debate-card [debate]='debate'></app-debate-card>
+                    <app-debate-card [debate]="debate"></app-debate-card>
             </mat-grid-tile>
         </mat-grid-list>
         
