--- a/sources/Debate-frontend/src/app/app.component.scss
+++ b/sources/Debate-frontend/src/app/app.component.scss
@@ -14,3 +14,12 @@
     padding: 0 14px;
     font-size: 32px;
 }
+
+.create-debate{
+    margin:auto;
+}
+
+.app-title{
+    color: white;
+    text-decoration: none;
+}
