--- a/sources/Debate-frontend/src/app/homepage/debate-card/debate-card.component.scss
+++ b/sources/Debate-frontend/src/app/homepage/debate-card/debate-card.component.scss
@@ -9,6 +9,7 @@
   background-color: #cccccc;
   margin: 0 auto 2em auto;
   background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
 }
 
