--- a/sources/Debate-frontend/src/app/debate/add-update-debate/add-update-debate.component.html
+++ b/sources/Debate-frontend/src/app/debate/add-update-debate/add-update-debate.component.html
@@ -11,7 +11,12 @@
 
         <mat-form-field hintLabel="5-600 znaków" class="form-field">
                 <mat-label>Opis debaty</mat-label>
-                <textarea matInput minlength="5" maxlength="600" required name="description" placeholder="Opis" [(ngModel)]="model.description"></textarea>
+                <textarea matInput minlength="5" maxlength="600"
+                 required name="description" placeholder="Opis"
+                  [(ngModel)]="model.description"
+                  cdkTextareaAutosize
+                  cdkAutosizeMinRows="3"
+                  ></textarea>
                 <mat-error *ngIf="model.description.length < 5">Opis musi mieć co najmniej 5 znaków</mat-error>
         </mat-form-field>
 
@@ -36,12 +41,12 @@
                 Zdjęcie ma ponad 4MB
             </span>
         </div>
+
+        <button mat-raised-button color="primary" [disabled]="!debateForm.form.valid || !isTagListValid()"
+         type="submit" style="margin-bottom: 7em" >
+            Dodaj debatę
+        </button>
         
-        <button mat-raised-button color="primary" type="submit" style="margin-bottom: 7em" >
-            Dodaj debatę</button>
-
     </form>
-
- 
 
 </div>
