--- a/sources/Debate-frontend/src/app/app.component.html
+++ b/sources/Debate-frontend/src/app/app.component.html
@@ -17,11 +17,11 @@
         notifications
       </mat-icon>
     </button>
-    <button mat-button>
-    <mat-icon class="toolbar-icon">
-      account_circle
-    </mat-icon>
-  </button>
+    <button mat-button class="login-button" routerLink="/login" >
+      <mat-icon class="toolbar-icon login-user">
+          account_circle
+      </mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="h100">
