--- a/sources/Debate-frontend/src/styles.scss
+++ b/sources/Debate-frontend/src/styles.scss
@@ -3,18 +3,25 @@
 
 html,
 body {
-  height: 100%;
+   height: 100%;
 }
 body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  overflow-y: hidden;
+   margin: 0;
+   font-family: Roboto, 'Helvetica Neue', sans-serif;
+   overflow-y: hidden;
 }
 
 .w100 {
-  width: 100%;
+   width: 100%;
 }
 
 .h100 {
-  height: 100%;
+   height: 100%;
+}
+
+.container {
+   flex-grow: 1;
+   margin: 0 1em 1em;
+   position: relative;
+   width: auto;
 }
