--- a/sources/Debate-frontend/src/app/debate/comment/comment.component.html
+++ b/sources/Debate-frontend/src/app/debate/comment/comment.component.html
@@ -1,1 +1,14 @@
-<p>comment works!</p>
+<li class="comment user-comment">
+  <div class="info">
+    <span class="author">{{ comment.authorName }}</span>
+    <span>{{
+      comment.publishedAt | date: 'dd/MM/yyyy HH:mm:ss'
+    }}</span>
+  </div>
+  <a class="avatar">
+    <div class="avatar-circle-sm" [ngClass]="getCustomAvatarColor()">
+      <span class="initials">{{ initials }}</span>
+    </div>
+  </a>
+  <p>{{ comment.content }}</p>
+</li>
