--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.scss
@@ -71,3 +71,31 @@
   font-weight: bold;
   padding: 1em 1em 0;
 }
+
+@-ms-keyframes spin {
+  from { -ms-transform: rotate(360deg); }
+  to { -ms-transform: rotate(0deg); }
+}
+@-moz-keyframes spin {
+  from { -moz-transform: rotate(360deg); }
+  to { -moz-transform: rotate(0deg); }
+}
+@-webkit-keyframes spin {
+  from { -webkit-transform: rotate(360deg); }
+  to { -webkit-transform: rotate(0deg); }
+}
+@keyframes spin {
+  from {
+      transform:rotate(360deg);
+  }
+  to {
+      transform:rotate(0deg);
+  }
+}
+
+.is-rotating {
+  animation-name: spin;
+  animation-duration: 1000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
