--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
@@ -48,10 +48,34 @@
   <p>{{ argument.content }}</p>
   <mat-divider></mat-divider>
   <h3 class="comment-section-header">Komentarze</h3>
-  <ul class="comment-section">
+  <h3
+    class="text-center"
+    *ngIf="
+      !isCommentSectionLoading &&
+      !isCommentLoadingError &&
+      comments.length === 0
+    "
+  >
+    Brak komentarzy
+  </h3>
+  <ul
+    class="comment-section"
+    *ngIf="!isCommentSectionLoading && !isCommentLoadingError"
+  >
     <app-comment
       *ngFor="let comment of comments"
       [comment]="comment"
     ></app-comment>
   </ul>
+  <mat-progress-bar
+    mode="buffer"
+    *ngIf="isCommentSectionLoading"
+  ></mat-progress-bar>
+  <div class="d-flex column text-center" *ngIf="isCommentLoadingError">
+    <h2 class="align-self-center">Nie można załadować komentarzy</h2>
+    <button mat-raised-button class="align-self-center" (click)="onReloadCommentsButtonClicked()">
+      <mat-icon [ngClass]="{ 'is-rotating': isRefreshing }">replay</mat-icon>
+      Załaduj ponownie
+    </button>
+  </div>
 </mat-expansion-panel>
