Add comment section and switch between debate's arguments and comments

--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
@@ -44,8 +44,10 @@
       </button>
     </mat-panel-description>
   </mat-expansion-panel-header>
-  <p>{{ argument.authorName }}</p>
   <p>{{ argument.content }}</p>
+  <p class="argument-footer">
+    {{ argument.authorName }} - Ostatnio edytowane: {{ argument.lastEditTime | date:'dd.MM.yyyy HH:mm:ss' }}
+  </p>
   <mat-divider></mat-divider>
   <h3 class="comment-section-header">Komentarze</h3>
   <h3
