--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.scss
@@ -99,3 +99,8 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
+
+.argument-footer {
+  font-style: italic;
+  text-align: right;
+}
