--- a/sources/Debate-frontend/src/app/debate/debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate.component.scss
@@ -12,3 +12,37 @@
 .header {
     margin: 1em auto 2em;
 }
+
+.section-button {
+  float: right;
+  width: 10em;
+  overflow: hidden;
+}
+
+@-ms-keyframes spin {
+  from { -ms-transform: rotate(360deg); }
+  to { -ms-transform: rotate(0deg); }
+}
+@-moz-keyframes spin {
+  from { -moz-transform: rotate(360deg); }
+  to { -moz-transform: rotate(0deg); }
+}
+@-webkit-keyframes spin {
+  from { -webkit-transform: rotate(360deg); }
+  to { -webkit-transform: rotate(0deg); }
+}
+@keyframes spin {
+  from {
+      transform:rotate(360deg);
+  }
+  to {
+      transform:rotate(0deg);
+  }
+}
+
+.is-rotating {
+  animation-name: spin;
+  animation-duration: 1000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
