--- a/sources/Debate-frontend/src/styles.scss
+++ b/sources/Debate-frontend/src/styles.scss
@@ -42,6 +42,10 @@ body {
    justify-content: center;
 }
 
+.align-items-center {
+   align-items: center;
+}
+
 .align-self-center {
    align-self: center;
 }
