--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
@@ -42,6 +42,20 @@
           >{{ argument.downVotes }}</span
         >
       </button>
+      <button
+        mat-icon-button
+        [matMenuTriggerFor]="menu"
+        aria-label="Example icon-button with a menu"
+        (click)="$event.stopPropagation()"
+      >
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>outlined_flag</mat-icon>
+          <span>Zgłoś argument</span>
+        </button>
+      </mat-menu>
     </mat-panel-description>
   </mat-expansion-panel-header>
   <p>{{ argument.content }}</p>
