Add ngx-timeago library and integrated it with comments and arguments

--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
@@ -61,7 +61,7 @@
   <p>{{ argument.content }}</p>
   <p class="argument-footer">
     {{ argument.authorName }} - Ostatnio edytowane:
-    {{ argument.lastEditTime | date: 'dd.MM.yyyy HH:mm:ss' }}
+    {{ argument.lastEditTime | timeago }}
   </p>
   <mat-divider></mat-divider>
   <h3 class="comment-section-header">Komentarze</h3>
