--- a/sources/Debate-frontend/src/app/debate/comment/comment.component.html
+++ b/sources/Debate-frontend/src/app/debate/comment/comment.component.html
@@ -1,8 +1,8 @@
 <li class="comment user-comment">
   <div class="info">
     <span class="author">{{ comment.authorName }}</span>
-    <span>{{
-      comment.publishedAt | date: 'dd/MM/yyyy HH:mm:ss'
+    <span style="font-style: italic; font-size: smaller; font-weight: 350;">{{
+      comment.publishedAt | timeago
     }}</span>
   </div>
   <a class="avatar">
