--- a/sources/Debate-frontend/src/app/debate/debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate.component.scss
@@ -46,3 +46,9 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
+
+.comment-section {
+  list-style: none;
+  width: 80%;
+  margin: auto;
+}
