--- a/sources/Debate-frontend/src/app/loginpage/loginpage.component.scss
+++ b/sources/Debate-frontend/src/app/loginpage/loginpage.component.scss
@@ -1,7 +1,7 @@
 .login-form {
     min-width: 150px;
     max-width: 500px;
-    width: 50%;
+    width: 70%;
     margin: auto;
   }
 
@@ -11,5 +11,10 @@
 }
 
 .loginContent {
-  margin-top: 10%;
+  margin-top: 5%;
+}
+
+.logCard {
+  width: 40%;
+  margin: auto;
 }
