--- a/sources/Debate-frontend/src/app/loginpage/registration/registration.component.scss
+++ b/sources/Debate-frontend/src/app/loginpage/registration/registration.component.scss
@@ -1,7 +1,7 @@
 .reg-form {
     min-width: 150px;
     max-width: 500px;
-    width: 50%;
+    width: 70%;
     margin: auto;
   }
 
@@ -11,5 +11,10 @@
 }
 
 .registrationContent {
-  margin-top: 10%;
+  margin-top: 5%;
+}
+
+.regCard {
+  margin: auto;
+  width: 40%;
 }
