--- a/sources/Debate-frontend/src/app/account/account.component.html
+++ b/sources/Debate-frontend/src/app/account/account.component.html
@@ -2,7 +2,9 @@
     <mat-card class="accountCard" >
     <div *ngIf="userDto.login ===''; then thenBlock else elseBlock"></div>
         <ng-template #thenBlock>
-            <mat-spinner></mat-spinner>
+            <div class="spinnerContainer">
+                <mat-spinner></mat-spinner>
+            </div>
         </ng-template>
         <ng-template #elseBlock>
             <mat-icon class="loginIcon">account_circle</mat-icon>
@@ -10,15 +12,15 @@
             <h3>{{userDto.email}}</h3>
             <h3>{{userDto.role}}</h3>
             <form class="reg-form" #regform="ngForm" (ngSubmit)="onSubmit()">
-                <mat-form-field class="example-full-width">
+                <mat-form-field class="w100">
                     <mat-label>Wprowadź stare hasło</mat-label>
                     <input matInput type="password" placeholder="Wprowadź stare hasło" required [(ngModel)]="oldPassword" name="oldPassword">
                 </mat-form-field>
-                <mat-form-field class="example-full-width">
+                <mat-form-field class="w100">
                     <mat-label>Wprowadź nowe hasło</mat-label>
                     <input matInput type="password" placeholder="Wprowadź nowe hasło" required [(ngModel)]="model.password" name="password">
                 </mat-form-field>
-                <mat-form-field class="example-full-width">
+                <mat-form-field class="w100">
                     <mat-label>Wprowadź nowe hasło</mat-label>
                     <input matInput type="password" placeholder="Wprowadź nowe hasło ponownie" required [(ngModel)]="passwordCheck" name="passwordCheck">
                 </mat-form-field>
