--- a/sources/Debate-frontend/src/app/account/account.component.scss
+++ b/sources/Debate-frontend/src/app/account/account.component.scss
@@ -8,10 +8,6 @@
     text-align: center;
 }
 
-mat-spinner {
-  margin: auto;
-}
-
 .reg-form {
   min-width: 150px;
   max-width: 500px;
@@ -21,4 +17,12 @@ mat-spinner {
 
 .login {
   font-size: xx-large;
+}
+
+.spinnerContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
