--- a/sources/Debate-frontend/src/app/loginpage/loginpage.component.html
+++ b/sources/Debate-frontend/src/app/loginpage/loginpage.component.html
@@ -1,5 +1,5 @@
 <div class="loginContent">
-    <mat-card class="logCard">
+    <div class="logCard">
         <form class="login-form" #loginform="ngForm" (ngSubmit)="onSubmit()">
             <mat-form-field class="example-full-width">
                 <mat-label>Login</mat-label>
@@ -9,8 +9,8 @@
                 <mat-label>Hasło</mat-label>
                 <input matInput type="password" placeholder="Wprowadź swoje hasło" [(ngModel)]="model.password" name="password">
             </mat-form-field>
-            <button mat-raised-button color="primary" type="submit" style="margin-bottom: 7em; width: 30%; margin-left: 5px;" >Zaloguj</button>
-            <button mat-button class="go-register-button" routerLink="/register">Nie masz jeszcze konta? Zarejestruj się</button>
+            <button mat-raised-button class="w100 submit-button" color="primary" type="submit" >Zaloguj</button>
+            <a mat-button class="go-register-button" routerLink="/register">Nie masz jeszcze konta? Zarejestruj się</a>
         </form>
-    </mat-card>
+    </div>
 </div>
