--- a/sources/Debate-frontend/src/app/loginpage/registration/registration.component.scss
+++ b/sources/Debate-frontend/src/app/loginpage/registration/registration.component.scss
@@ -15,6 +15,11 @@
 }
 
 .regCard {
-  margin: auto;
   width: 40%;
+  margin: auto;
+  border-radius: 5px;
+  border: 1px solid black;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 2em;
 }
