--- a/sources/Debate-frontend/src/app/debate/debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate.component.scss
@@ -47,8 +47,17 @@
   animation-timing-function: linear;
 }
 
-.comment-section {
+.comment-list {
   list-style: none;
   width: 80%;
   margin: auto;
+}
+
+.no-content-info {
+  margin-top: 2em;
+  @extend .text-center;
+}
+
+.pt-2 {
+  padding-top: 2em;
 }
