refactor code after review

--- a/sources/Debate-frontend/src/app/account/account.component.html
+++ b/sources/Debate-frontend/src/app/account/account.component.html
@@ -24,7 +24,7 @@
                     <mat-label>Wprowadź nowe hasło</mat-label>
                     <input matInput type="password" placeholder="Wprowadź nowe hasło ponownie" required [(ngModel)]="passwordCheck" name="passwordCheck">
                 </mat-form-field>
-                <button mat-raised-button color="primary" [disabled]="!regform.form.valid" type="submit" style="margin-bottom: 7em; width: 100%; margin-left: 5px;" >Zapisz</button>
+                <button mat-raised-button color="primary" [disabled]="!regform.form.valid" type="submit" style="width: 100%; margin-left: 5px;" >Zapisz</button>
             </form>
         </ng-template>
     </mat-card>
