--- a/sources/Debate-frontend/src/app/loginpage/loginpage.component.html
+++ b/sources/Debate-frontend/src/app/loginpage/loginpage.component.html
@@ -1,11 +1,11 @@
 <div class="loginContent">
     <div class="logCard">
         <form class="login-form" #loginform="ngForm" (ngSubmit)="onSubmit()">
-            <mat-form-field class="example-full-width">
+            <mat-form-field class="w100">
                 <mat-label>Login</mat-label>
                 <input matInput placeholder="Podaj swój login" [(ngModel)]="model.login" name="login">
             </mat-form-field>
-            <mat-form-field class="example-full-width">
+            <mat-form-field class="w100">
                 <mat-label>Hasło</mat-label>
                 <input matInput type="password" placeholder="Wprowadź swoje hasło" [(ngModel)]="model.password" name="password">
             </mat-form-field>
