Make homepage responsive. Add environments

--- a/sources/Debate-frontend/src/app/homepage/debate-card/debate-card.component.scss
+++ b/sources/Debate-frontend/src/app/homepage/debate-card/debate-card.component.scss
@@ -1,9 +1,10 @@
 .debate-card {
   max-width: 500px;
+  min-width: 300px;
+  margin: auto;
 }
 
 #debate-img {
-  width: 500px;
   max-width: 500px;
   height: 281.25px;
   background-color: #cccccc;
