--- a/sources/Debate-frontend/src/app/homepage/homepage.component.html
+++ b/sources/Debate-frontend/src/app/homepage/homepage.component.html
@@ -1,15 +1,17 @@
+
+
 <mat-tab-group mat-stretch-tabs>
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon aria-hidden="false" aria-label="Polecane">trending_up</mat-icon>
       Polecane
     </ng-template>
-    
-    <div class="debate-card-container">
-      <app-debate-card class="debate-card" *ngFor="let debate of popularDebates" [debate]="debate"></app-debate-card>
-    </div>
-
-  </mat-tab>
+      <div class="debate-card-container">
+        <app-debate-card class="debate-card" *ngFor="let debate of popularDebates" [debate]="debate"></app-debate-card>
+      </div>
+      <app-load-more (loadRequested)="loadPopularDebates()" #loadPopularDebate>
+      </app-load-more>
+    </mat-tab>
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon aria-hidden="false" aria-label="Nowe">fiber_new</mat-icon>
@@ -18,6 +20,8 @@
     <div class="debate-card-container">      
       <app-debate-card class="debate-card" *ngFor="let debate of newDebates" [debate]="debate"></app-debate-card>
     </div>
+    <app-load-more (loadRequested)="loadNewDebates()" #loadNewDebate>
+    </app-load-more>
   </mat-tab>
 
   <mat-tab>
@@ -25,14 +29,10 @@
       <mat-icon aria-hidden="false" aria-label="Gorące">whatshot</mat-icon>
       Gorące
     </ng-template>
-    
     <div class="debate-card-container">
       <app-debate-card class="debate-card" *ngFor="let debate of hotDebates" [debate]="debate"></app-debate-card>
     </div>
-      
+    <app-load-more (loadRequested)="loadHotDebates()" #loadHotDebate>
+    </app-load-more>
   </mat-tab>
 </mat-tab-group>
-
-<div class = "w100">
-  Nie ma więcej debat!
-</div>
