--- a/sources/Debate-frontend/src/app/debate/add-update-debate/add-update-debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/add-update-debate/add-update-debate.component.scss
@@ -1,26 +1,32 @@
-.content{
-    width:60%;
+.formCard {
+    width: 75%;
+    margin: 1em auto 4em;
+    border-radius: 5px;
+    border: 1px solid gray;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 2em;
+    h1{
+        text-align: center;
+    }
+    font-size: 1.3em;
+  }
+
+.debate-form {
+    min-width: 250px;
+    max-width: 800px;
+    width: 70%;
     margin: auto;
-    text-align: center;
-}
-
-h1{
-    margin-top:1em;
-    font-size: 3em;
-}
-
-.debate-form{
-    width: 100%;
-    margin-top: 1em;
-    font-size: 150%;
-}
+  }
 
 mat-form-field{
-    width:80%;
+    width:95%;
+    margin: 0 auto 1em;
 }
 
 .image-input{
-    margin: 1.5em auto;
+    text-align: center;
+    margin: 3em 0;
     label{
         margin: 0.5em;
         display: block;
@@ -33,9 +39,8 @@ mat-form-field{
 }
 
 img{
-    width: 500px;
-    max-width: 500px;
-    height: 281.25px;
+    max-width: 100%;
+    max-height: 100%;
     background-color: #cccccc;
     display: block;
     margin:auto;
