--- a/sources/Debate-frontend/src/app/loginpage/registration/registration.component.scss
+++ b/sources/Debate-frontend/src/app/loginpage/registration/registration.component.scss
@@ -18,7 +18,7 @@
   width: 40%;
   margin: auto;
   border-radius: 5px;
-  border: 1px solid black;
+  border: 1px solid gray;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   padding: 2em;
